# batched-threshold-encryption

./: .gitignore  Cargo.toml  NOTICE  PROGRESS.md  README.md  REPORT.md  SECURITY.md  brand.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json
.github/workflows/: ci.yml  release.yml
.prism/: project-model.md
crates/bte-cli/: Cargo.toml
crates/bte-cli/src/: main.rs
crates/bte-coordinator/: Cargo.toml
crates/bte-coordinator/src/: api.rs  db.rs  engine.rs  lib.rs  main.rs  merkle.rs  state.rs
crates/bte-coordinator/tests/: integration.rs
crates/bte-crypto/: Cargo.toml
crates/bte-crypto/benches/: bte_ops.rs
crates/bte-crypto/src/: lib.rs  wire.rs
crates/bte-crypto/tests/: api.rs
crates/bte-node/: Cargo.toml
crates/bte-node/src/: keystore.rs  main.rs
demos/sealed-bid/: index.ts
docker/: Caddyfile  Dockerfile.web  docker-compose.prod.yml
docs/: deploy-railway.md  devnet-runbook.md  how-peal-is-built.html  launch.md  protocol.html  quickstart.md
examples/: next-route.ts  package.json  ten-lines.ts
examples/vite-page/: index.html  main.ts  package.json
railway/: coordinator.json  node.json
spec/: API-MAP.md  DEVIATIONS.md  ROADMAP.md  index.md
